# jscgal

./: CMakeLists.txt  README.md  build.sh  init.sh
cmake/: boost.cmake  cgal.cmake  gmp.cmake  mpfr.cmake
include/: bindings.h
src/: main.cpp
